feat: support style settings

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,260 @@
+/* @settings
+
+name: Task Genius
+id: task-genius
+settings:
+    - 
+        id: task-colors-heading
+        title: Task Status Colors
+        type: heading
+        level: 1
+    - 
+        id: task-completed-color
+        title: Completed Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#4caf50'
+        default-dark: '#4caf50'
+    - 
+        id: task-doing-color
+        title: Doing Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#80dee5'
+        default-dark: '#379fa7'
+    - 
+        id: task-in-progress-color
+        title: In Progress Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#f9d923'
+        default-dark: '#ffc107'
+    - 
+        id: task-abandoned-color
+        title: Abandoned Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#eb5353'
+        default-dark: '#f44336'
+    - 
+        id: task-planned-color
+        title: Planned Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#9c27b0'
+        default-dark: '#ce93d8'
+    - 
+        id: task-question-color
+        title: Question Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#2196f3'
+        default-dark: '#42a5f5'
+    - 
+        id: task-important-color
+        title: Important Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#f44336'
+        default-dark: '#ef5350'
+    - 
+        id: task-star-color
+        title: Star Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#ffc107'
+        default-dark: '#ffd54f'
+    - 
+        id: task-quote-color
+        title: Quote Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#607d8b'
+        default-dark: '#90a4ae'
+    - 
+        id: task-location-color
+        title: Location Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#795548'
+        default-dark: '#8d6e63'
+    - 
+        id: task-bookmark-color
+        title: Bookmark Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#ff9800'
+        default-dark: '#ffb74d'
+    - 
+        id: task-information-color
+        title: Information Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#00bcd4'
+        default-dark: '#26c6da'
+    - 
+        id: task-idea-color
+        title: Idea Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#9c27b0'
+        default-dark: '#ce93d8'
+    - 
+        id: task-pros-color
+        title: Pros Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#4caf50'
+        default-dark: '#66bb6a'
+    - 
+        id: task-cons-color
+        title: Cons Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#f44336'
+        default-dark: '#ef5350'
+    - 
+        id: task-fire-color
+        title: Fire Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#ff5722'
+        default-dark: '#ff7043'
+    - 
+        id: task-key-color
+        title: Key Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#ffd700'
+        default-dark: '#ffd700'
+    - 
+        id: task-win-color
+        title: Win Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#66bb6a'
+        default-dark: '#81c784'
+    - 
+        id: task-up-color
+        title: Up Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#4caf50'
+        default-dark: '#66bb6a'
+    - 
+        id: task-down-color
+        title: Down Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#f44336'
+        default-dark: '#ef5350'
+    - 
+        id: task-note-color
+        title: Note Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#9e9e9e'
+        default-dark: '#bdbdbd'
+    - 
+        id: task-amount-color
+        title: Amount/Savings Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#8bc34a'
+        default-dark: '#aed581'
+    - 
+        id: task-speech-color
+        title: Speech Bubble Task Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#03a9f4'
+        default-dark: '#29b6f6'
+    - 
+        id: progress-bar-colors
+        title: Progress Bar Colors
+        type: heading
+        level: 1
+    - 
+        id: progress-0-color
+        title: 0% Progress Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#ae431e'
+        default-dark: '#ae431e'
+    - 
+        id: progress-25-color
+        title: 25% Progress Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#e5890a'
+        default-dark: '#e5890a'
+    - 
+        id: progress-50-color
+        title: 50% Progress Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#b4c6a6'
+        default-dark: '#b4c6a6'
+    - 
+        id: progress-75-color
+        title: 75% Progress Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#6bcb77'
+        default-dark: '#6bcb77'
+    - 
+        id: progress-100-color
+        title: 100% Progress Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#4d96ff'
+        default-dark: '#4d96ff'
+    - 
+        id: progress-background-color
+        title: Progress Bar Background Color
+        type: variable-themed-color
+        opacity: false
+        format: hex
+        default-light: '#f1f1f1'
+		default-dark: '#f1f1f1'
+*/
+
 /* Define theme variables */
 :root {
-	/* Task status colors - light theme */
+	/* Task status colors */
 	--task-completed-color: #4caf50;
 	--task-doing-color: #80dee5;
 	--task-in-progress-color: #f9d923;
 	--task-abandoned-color: #eb5353;
-	--task-planned-color: #9c27b0; /* Added planned task color */
+	--task-planned-color: #9c27b0; /* Planned task color */
 	--task-question-color: #2196f3; /* Question tasks */
 	--task-important-color: #f44336; /* Important tasks */
 	--task-star-color: #ffc107; /* Star tasks */
@@ -31,6 +280,8 @@
 	--progress-50-color: #b4c6a6;
 	--progress-75-color: #6bcb77;
 	--progress-100-color: #4d96ff;
+
+	--progress-background-color: #f1f1f1;
 }
 
 /* Dark theme color adjustments */
@@ -39,7 +290,7 @@
 	--task-doing-color: #379fa7;
 	--task-in-progress-color: #ffc107;
 	--task-abandoned-color: #f44336;
-	--task-planned-color: #ce93d8; /* Added planned task color for dark theme */
+	--task-planned-color: #ce93d8; /* Planned task color for dark theme */
 	--task-question-color: #42a5f5; /* Question tasks dark theme */
 	--task-important-color: #ef5350; /* Important tasks dark theme */
 	--task-star-color: #ffd54f; /* Star tasks dark theme */
@@ -64,6 +315,8 @@
 	--progress-50-color: #b4c6a6;
 	--progress-75-color: #6bcb77;
 	--progress-100-color: #4d96ff;
+
+	--progress-background-color: #f1f1f1;
 }
 
 /* Set Default Progress Bar For Plugin */
@@ -88,7 +341,7 @@
 
 /* Progress bar colors for different percentages of completion */
 .progress-bar-inline-empty {
-	background-color: #f1f1f1;
+	background-color: var(--progress-background-color);
 }
 
 .progress-bar-inline-0 {
@@ -143,7 +396,7 @@
 
 .progress-bar-inline-background {
 	color: #000 !important;
-	background-color: #f1f1f1 !important;
+	background-color: var(--progress-background-color);
 	border-radius: 10px;
 	flex-direction: row;
 	justify-content: flex-start;
