--- a/styles.css
+++ b/styles.css
@@ -801,6 +801,7 @@ settings:
 .task-filter-panel {
 	padding: var(--size-4-4) var(--size-4-4);
 	padding-bottom: var(--size-2-2);
+	padding-left: var(--size-4-8);
 	background-color: var(--background-primary);
 	border-top: 1px solid var(--background-modifier-border);
 	display: flex;
