style: support active state of filter action

--- a/styles.css
+++ b/styles.css
@@ -810,6 +810,11 @@ settings:
 	overflow-y: auto;
 }
 
+.task-filter-active {
+	color: var(--color-accent-2);
+	font-weight: bold;
+}
+
 .task-filter-panel > .setting-item {
 	border-top: unset;
 }
