--- a/styles.css
+++ b/styles.css
@@ -485,7 +485,7 @@ settings:
 	font-weight: var(--font-bold);
 }
 
-.task-state {
+.task-state.live-preview-mode {
 	padding-inline-start: var(--size-4-2);
 	padding-inline-end: var(--size-2-1);
 }
